--- a/edureka.html
+++ b/edureka.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Page</title>
-    <link rel="stylesheet" type="text/css" href="edureka.css" />
+    <link rel="stylesheet" type="text/css" href="css/edureka.css" />
 </head>
 
 <body id="body">
