--- a/Contact.html
+++ b/Contact.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
     <link rel="stylesheet" href="css/Format.css">
+    
 </head>
+
 <body class="imageinsert">
 
-<nav class="navigation">
-    <a href="HInnBlog.html">Home</a>
-    <a href="about.html">About Me</a>
-    <a href="gallery.html">Photos</a>
-    <a href="Contact.html">Contact</a>
-</nav>
-
-<h3 class="titlecase">Contact</h3>
-
-<p>
-    I can be reached through:
+    <nav class="navigation">
+        <a href="HInnBlog.html">Home</a>
+        <a href="about.html">About Me</a>
+        <a href="gallery.html">Photos</a>
+        <a href="Contact.html">Contact</a>
+    </nav>
+    <h3 class="titlecase">Contact</h3>
+    <p>
+        I can be reached through:
     <ol>
-    <li><b>Telephone-</b>254111592697</li>
-    <li><b>Email-</b>machachebenny@hotmail.com , bennyhinn253.bh@gmail.com</li>
-    <li><b>Instagram-</b>@ts_hinn</li>
+        <li><b>Telephone-</b>254111592697</li>
+        <li><b>Email-</b>machachebenny@hotmail.com , bennyhinn253.bh@gmail.com</li>
+        <li><b>Instagram-</b>@ts_hinn</li>
+    </ol> </p>
 
-
-
-</ol>
-</p>
-
-
-
+    <script src="index.js"></script>
 </body>
+
 </html>
